review section/ why-section/ winner-section

--- a/lgc-capital-3b.html
+++ b/lgc-capital-3b.html
@@ -135,6 +135,202 @@
         <div class="container">
             <div class="inner-row">
                 <h2 class="title">What Delighted Clients Say About Us</h2>
+                <div class="review-slider">
+                    <div class="slide-item">
+                        <div class="slide-item-content">
+                            <div class="icon-row">
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                            </div>
+                            <div class="text-row">                 
+                                <p class="text">“LGC’s financing and strategic help increased our company’s valuation by 3x when we sold it to a foreign investor”</p>        
+                            </div>
+                            <div class="reviewer-row">
+                                <div class="reviewer">
+                                    <p>Thabo Mbeki,</p>
+                                    <p>former CEO Africa Weather</p>
+                                </div>
+                                <div class="slide-item-img"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide-item">
+                        <div class="slide-item-content">
+                            <div class="icon-row">
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                            </div>
+                            <div class="text-row">                 
+                                <p class="text">“LGC’s financing and strategic help increased our company’s valuation by 3x when we sold it to a foreign investor”</p>        
+                            </div>
+                            <div class="reviewer-row">
+                                <div class="reviewer">
+                                    <p>Thabo Mbeki,</p>
+                                    <p>former CEO Africa Weather</p>
+                                </div>
+                                <div class="slide-item-img"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide-item">
+                        <div class="slide-item-content">
+                            <div class="icon-row">
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                            </div>
+                            <div class="text-row">                 
+                                <p class="text">“LGC’s financing and strategic help increased our company’s valuation by 3x when we sold it to a foreign investor”</p>        
+                            </div>
+                            <div class="reviewer-row">
+                                <div class="reviewer">
+                                    <p>Thabo Mbeki,</p>
+                                    <p>former CEO Africa Weather</p>
+                                </div>
+                                <div class="slide-item-img"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide-item">
+                        <div class="slide-item-content">
+                            <div class="icon-row">
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                            </div>
+                            <div class="text-row">                 
+                                <p class="text">“LGC’s financing and strategic help increased our company’s valuation by 3x when we sold it to a foreign investor”</p>        
+                            </div>
+                            <div class="reviewer-row">
+                                <div class="reviewer">
+                                    <p>Thabo Mbeki,</p>
+                                    <p>former CEO Africa Weather</p>
+                                </div>
+                                <div class="slide-item-img"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide-item">
+                        <div class="slide-item-content">
+                            <div class="icon-row">
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                                <svg class="star-ico"><use xlink:href="#star-ico"></use></svg>
+                            </div>
+                            <div class="text-row">                 
+                                <p class="text">“LGC’s financing and strategic help increased our company’s valuation by 3x when we sold it to a foreign investor”</p>        
+                            </div>
+                            <div class="reviewer-row">
+                                <div class="reviewer">
+                                    <p>Thabo Mbeki,</p>
+                                    <p>former CEO Africa Weather</p>
+                                </div>
+                                <div class="slide-item-img"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="why-section">
+        <div class="container">
+            <div class="inner-row">
+                <h2 class="title">Why LGC Capital vs. other SME Lenders</h2>
+                <div class="item-row">
+                    <div class="item">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M35.75 72.25C37.25 72.5 38.5 72.5 40 72.5C58 72.5 72.5 58 72.5 40C72.5 22 58 7.5 40 7.5C22 7.5 7.5 22 7.5 40C7.5 41 7.5 42 7.75 43" stroke="#223C76" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M40 19.25V40L51.25 46.75" stroke="#223C76" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M17.5 50V52.5" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M17.5 75V72.5" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M10 67.75C10 70.25 12 72.5 14.75 72.5H20.5C23 72.5 25.25 70.5 25.25 67.75C25.25 65.75 23.75 63.75 21.75 63.25L13.75 61.75C11.75 61.25 10.25 59.25 10.25 57.25C10.25 54.75 12.25 52.5 15 52.5H20.75C23.25 52.5 25.5 54.5 25.5 57.25" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="text-holder">
+                                <p class="item-title">Faster Decisions & Loans that Banks Won't Do</p>
+                                <p class="item-description">As specialists in mining and industry, we can better assess risk and make faster decisions. We also often lend to those that traditional banks won't touch.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 72.5H65C67.75 72.5 70 70.25 70 67.5V30L40 7L10 30V65" stroke="#223C76" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M20 62.5H60" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="text-holder">
+                                <p class="item-title">Ability to Waive Collateral</p>
+                                <p class="item-description">For some businesses serving specific blue-chip clients, we can often waive collateral.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M40 27.5V30" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M40 52.5V50" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M32.5 45.25C32.5 47.75 34.5 50 37.25 50H43C45.5 50 47.75 48 47.75 45.25C47.75 43.25 46.25 41.25 44.25 40.75L36.25 39.25C34.25 38.75 32.75 36.75 32.75 34.75C32.75 32.25 34.75 30 37.5 30H43.25C45.75 30 48 32 48 34.75" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M30 71C17 66.75 7.5 54.5 7.5 40C7.5 22 22 7.5 40 7.5C58 7.5 72.5 22 72.5 40C72.5 58 58 72.5 40 72.5" stroke="#223C76" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="text-holder">
+                                <p class="item-title">Enormous Purchasing Power & Higher Profits</p>
+                                <p class="item-description">As the primary investor in BT Industrial, we have significant purchasing power and can sometimes get you better prices with your suppliers, so you are more profitable.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-inner">
+                            <div class="icon-holder">
+                                <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M44 44.5L66 27.75" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M57.75 20.25C52.5 17 46.5 15 40 15C22 15 7.5 29.5 7.5 47.5C7.5 54 9.5 60 12.75 65H67.5C70.75 60 72.75 54 72.75 47.5C72.75 44.25 72.25 41 71.25 37.75" stroke="#223C76" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M40 52.5C42.7614 52.5 45 50.2614 45 47.5C45 44.7386 42.7614 42.5 40 42.5C37.2386 42.5 35 44.7386 35 47.5C35 50.2614 37.2386 52.5 40 52.5Z" stroke="#6AC2F3" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="text-holder">
+                                <p class="item-title">Strategy & Higher Valuation</p>
+                                <p class="item-description">Our deep understanding of mining and industry often let’s us add strategic value like we did for Africa Weather (3x rise in company valuation)</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="winner-section">
+        <div class="container">
+            <div class="inner-row">
+                <h2 class="title">Winner of Two Presidential Awards</h2>
+                <div class="item">
+                    <img src="assets/images/winner.jpg" alt="winner">
+                    <div class="text-holder">
+                        <div class="inner-holder">
+                            <p>Our founder, Kgomotso Lekola, has received two South African presidential awards for excellence, including Industrialist of The Year.</p>
+                            <p class="text-bold">With LGC, you are in good hands!</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -148,6 +344,21 @@
         </div>
     </footer>
 
+
+
+
+
+    <!-- svg sprite -->
+    <div class="main_svg" hidden>
+        <svg>
+            <defs>
+                <!-- star-ico -->
+                <symbol id="star-ico" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.0972 0L14.5192 6.91879L22.1699 8.01508L16.6213 13.3991L17.9413 21L11.0972 17.4188L4.22866 21L5.54859 13.3991L0 8.01508L7.67515 6.91879L11.0972 0Z" fill="#6AC2F3"/>
+                </symbol>
+            </defs>
+        </svg>
+    </div>
 
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/slick.min.js"></script>
