--- a/lgc-capital-3b.html
+++ b/lgc-capital-3b.html
@@ -11,7 +11,6 @@
     <link rel="apple-touch-icon" href="./assets/images/favicon/cropped-favicon-180x180.jpg" />
     <meta name="msapplication-TileImage" content="./assets/images/favicon/cropped-favicon-270x270.jpg" />
 
-
     <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -335,6 +334,118 @@
         </div>
     </section>
 
+    <section class="img-text-section">
+        <div class="container">
+            <div class="inner-row">
+                <div class="text-col">
+                    <div class="text-holder">
+                        <h2 class="title">Invoice Discounting Details</h2>
+                        <p class="description">Use your accounts receivable to get immediate access to cash. You may sell some or all your invoices to LGC Capital, which then assumes the rights to collect the invoice payments.</p>
+                        <div class="list-holder">
+                            <p class="list-title">How It Works</p>
+                            <ul class="list list-numbered">
+                                <li>We setup a tripartite agreement with you, LGC capital, and your end customer.</li>
+                                <li>LGC Capital secures credit insurance to protect against non-payment, and you agree to buy back the invoice if the client fails to pay.</li>
+                                <li>You get an instant cash advance upon approval, and payment collection then transfers to LGC capital.</li>
+                            </ul>
+                        </div>
+                        <div class="list-holder">
+                            <p class="list-title">Benefits</p>
+                            <ul class="list check-list">
+                                <li>Focus on your core business and customers and let us worry about payment collection.</li>
+                                <li>Avoid missed payroll during low cash periods.</li>
+                                <li>Reduce risk to your business through our credit insurance for non-payment.</li>
+                            </ul>
+                        </div>
+                        <div class="btn-holder">
+                            <a href="#" class="btn btn-primary">Find Out Your Interest Rate</a>
+                            <p>Get a decision in <span class="text-underline">under 48 hours</span> for R50K to R500K. Larger amounts take a bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-col">
+                    <div class="img-holder">
+                        <img src="assets/images/invoice.jpg" alt="invoice">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="img-text-section img-reverse">
+        <div class="container">
+            <div class="inner-row">
+                <div class="text-col">
+                    <div class="text-holder">
+                        <h2 class="title">Purchase Order Financing Details</h2>
+                        <p class="description">Need to fulfil a large order but don’t have enough cash? We offer a tailor-made purchase order financing solution and would love to chat.</p>
+                        <div class="list-holder">
+                            <p class="list-title">How It Works</p>
+                            <ul class="list list-numbered">
+                                <li>You obtain instant capital for large orders upon approval.</li>
+                                <li>We pay your suppliers directly, ensuring a smooth procurement process.</li>
+                                <li>Finally, we handle customer payment collection and remit the balance to you.</li>
+                            </ul>
+                        </div>
+                        <div class="list-holder">
+                            <p class="list-title">Benefits</p>
+                            <ul class="list check-list">
+                                <li>Fulfil much larger orders than you could on your own, and expand to new markets.</li>
+                                <li>Better cashflow management—avoid tying up your cash in inventory or production costs.</li>
+                                <li>We can often waive collateral for some businesses serving specific blue-chip clients.</li>
+                            </ul>
+                        </div>
+                        <div class="btn-holder">
+                            <a href="#" class="btn btn-primary">Find Out Your Interest Rate</a>
+                            <p>Get a decision in <span class="text-underline">under 48 hours</span> for R50K to R500K. Larger amounts take a bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-col">
+                    <div class="img-holder">
+                        <img src="assets/images/financing-details.jpg" alt="financing-details">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-section">
+        <div class="container">
+            <div class="inner-row">
+                <div class="text-col">
+                    <div class="text-holder">
+                        <h2 class="title">About<br> LGC Capital</h2>
+                        <p>Founded by Industrialist of the Year Kgomotso Lekola, LGC Capital is a premier finance solutions provider to fast growth businesses in South Africa and beyond.</p>
+                        <p>Over the past <span class="text-bold">15 years</span> we have supported companies like BT Industrial, Glen 21 Entertainment, Africa Weather, Teddy’s Icecream, Plasti-Tech Piping Systems and dozens of SMEs.</p>
+                        <p>We are especially interested in working with SMEs in mining and industry who serve blue chip firms,</p>
+                    </div>
+                </div>
+                <div class="img-col">
+                    <div class="img-holder">
+                        <img src="assets/images/kgomotso.jpg" alt="kgomotso">
+                        <div class="founder-holder">
+                            <p class="text-bold">Kgomotso Lekola,</p>
+                            <p>Founder LGC Capital</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta-section">
+        <div class="container">
+            <div class="inner-row">
+                <h2 class="title">Get a Decision in Under 48 Hours</h2>
+                <p class="description">Instant Cash Advances for Your Invoices & Purchase Orders</p>
+                <div class="btn-holder">
+                    <a href="#" class="btn btn-primary">Find Out Your Interest Rate</a>
+                </div>
+                <p class="text">Get a decision in under 48 hours for R50K to R500K. Larger amounts take a bit longer.</p>
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="container">
@@ -343,10 +454,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
     <!-- svg sprite -->
     <div class="main_svg" hidden>
