--- a/lgc-capital-3b.html
+++ b/lgc-capital-3b.html
@@ -44,10 +44,14 @@
                                     <div class="form-group">
                                         <select class="form-control">
                                             <option>Choose Your Country</option>
+                                            <option>Choose Your Country</option>
+                                            <option>Choose Your Country</option>
                                         </select>
                                     </div>
                                     <div class="form-group">
                                         <select class="form-control">
+                                            <option>Cash Advance Amount</option>
+                                            <option>Cash Advance Amount</option>
                                             <option>Cash Advance Amount</option>
                                         </select>
                                     </div>
