--- a/lgc-capital-form.html
+++ b/lgc-capital-form.html
@@ -188,8 +188,9 @@
                             <label class="label" for="profitAfterTaxInput">Profit after tax</label>
                             <input type="text" class="form-control" id="profitAfterTaxInput" placeholder="Profit after tax">
                         </div>
+
                         <div class="form-group custom-w">
-                            <button type="submit" class="btn btn-primary">Get a Faster Decision</button>
+                            <button type="submit" class="btn btn-primary modal-toggle">Get a Faster Decision</button>
                         </div>
                     </div>
                 </div>
@@ -204,6 +205,52 @@
             </div>
         </div>
     </footer>
+
+    <!-- modal -->
+    <div class="modal">
+        <div class="modal-overlay modal-toggle"></div>
+        <div class="modal-wrapper modal-transition">
+            <button class="modal-close modal-toggle">
+                <svg class="icon-close icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.5 8.5L39.5 39.5" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+                    <path d="M39.5 8.5L8.5 39.5" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+                </svg>
+            </button>
+
+            <form class="modal-form form-holder">
+                <h2 class="modal-title">Find Out Your Interest Rate</h2>
+                <p class="modal-subtitle">Get a decision in under 48 hours for R50K to R500K. Larger amounts take a bit longer</p>
+
+                <div class="form-group">
+                    <select class="form-control">
+                        <option>South Africa</option>
+                        <option>Zambia</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <select class="form-control">
+                        <option>Cash Advance Amount</option>
+                        <option>Cash Advance Amount</option>
+                        <option>Cash Advance Amount</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your Business’s Name">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your Business Email">
+                </div>
+                <button class="btn btn-primary modal-toggle">Find Out Your Interest Rate</button>
+            </form>
+                    
+        </div>
+    </div>
+
 
     <!-- svg sprite -->
     <div class="main_svg" hidden>
@@ -250,6 +297,16 @@
                     // otherwise show number of files
                     $textContainer.text(filesCount + ' files selected');
                 }
+            });
+        });
+    </script>
+
+    <!-- modal -->
+    <script>
+        $(document).ready(function(){
+            $('.modal-toggle').on('click', function(e) {
+                e.preventDefault();
+                $('.modal').toggleClass('is-visible');
             });
         });
     </script>
