--- a/lgc-capital-form.html
+++ b/lgc-capital-form.html
@@ -245,7 +245,9 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Your Business Email">
                 </div>
-                <button class="btn btn-primary modal-toggle">Find Out Your Interest Rate</button>
+                <div class="form-group">
+                    <button class="btn btn-primary modal-toggle">Find Out Your Interest Rate</button>
+                </div>
             </form>
                     
         </div>
