--- a/lgc-capital-3a.html
+++ b/lgc-capital-3a.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/form.css">
 </head>
 <body class="p-3a">
 
@@ -464,8 +463,8 @@
                 <p class="modal-subtitle">Get a decision in under 48 hours for R50K to R500K. Larger amounts take a bit longer</p>
 
                 <div class="form-group">
-                    <div class="iconPlacejs"></div>
-                    <select class="form-control">
+                    <div class="icon-place iconPlacejs"></div>
+                    <select class="form-control" disabled>
                         <option>South Africa</option>
                         <option>Zambia</option>
                     </select>
@@ -488,7 +487,9 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Your Business Email">
                 </div>
-                <button type="submit" class="btn btn-primary">Find Out Your Interest Rate</button>
+                <div class="form-group">
+                    <button class="btn btn-primary modal-toggle">Find Out Your Interest Rate</button>
+                </div>
             </form>
                     
         </div>
