add link on form page

--- a/lgc-capital-3a.html
+++ b/lgc-capital-3a.html
@@ -461,7 +461,6 @@
             <form class="modal-form form-holder">
                 <h2 class="modal-title">Find Out Your Interest Rate</h2>
                 <p class="modal-subtitle">Get a decision in under 48 hours for R50K to R500K. Larger amounts take a bit longer</p>
-
                 <div class="form-group">
                     <div class="icon-place iconPlacejs"></div>
                     <select class="form-control" disabled>
@@ -469,7 +468,6 @@
                         <option>Zambia</option>
                     </select>
                 </div>
-
                 <div class="form-group">
                     <select class="form-control">
                         <option>Cash Advance Amount</option>
@@ -477,7 +475,6 @@
                         <option>Cash Advance Amount</option>
                     </select>
                 </div>
-
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Your Name">
                 </div>
@@ -488,7 +485,7 @@
                     <input type="text" class="form-control" placeholder="Your Business Email">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary modal-toggle">Find Out Your Interest Rate</button>
+                    <a href="/lgc-capital-form.html" class="btn btn-primary">Find Out Your Interest Rate</a>
                 </div>
             </form>
                     
