--- a/lgc-capital-3a.html
+++ b/lgc-capital-3a.html
@@ -485,7 +485,7 @@
                     <input type="text" class="form-control" placeholder="Your Business Email">
                 </div>
                 <div class="form-group">
-                    <a href="/lgc-capital-form.html" class="btn btn-primary">Find Out Your Interest Rate</a>
+                    <a href="https://oliinyk.github.io/lgc-capital/lgc-capital-form.html" class="btn btn-primary">Find Out Your Interest Rate</a>
                 </div>
             </form>
                     
