--- a/lgc-capital-3b.html
+++ b/lgc-capital-3b.html
@@ -42,12 +42,31 @@
                             <form class="form">
                                 <div class="form-row">
                                     <div class="form-group">
-                                        <select class="form-control">
+                                        <!-- <select class="form-control">
                                             <option>Choose Your Country</option>
-                                            <option>Choose Your Country</option>
-                                            <option>Choose Your Country</option>
+                                            <option>South Africa</option>
+                                            <option>Zambia</option>
+                                        </select> -->
+
+
+
+                                        <!-- <select id="mySelect">
+                                            <option value="2" data-image="assets/images/south-africa.svg">Option 2</option>
+                                            <option value="1" data-image="assets/images/south-africa.svg">Option 1</option>
+                                            <option value="3" data-image="image3.jpg">Option 3</option>
+                                        </select> -->
+                                        <!-- <img id="selectedImage" src="" alt="Selected Image"> -->
+
+                                        <select id="mySelect" class="form-control">
+                                            <option value="1">Choose Your Country</option>
+                                            <option value="2" style="background-image:url('assets/images/south-africa.svg')">South Africa</option>
+                                            <option value="3" style="background-image:url('assets/images/zambia.svg')">Zambia</option>
                                         </select>
+                                        <div id="selectedImage" class="selected-image"></div>
+                                        
+
                                     </div>
+
                                     <div class="form-group">
                                         <select class="form-control">
                                             <option>Cash Advance Amount</option>
@@ -64,9 +83,9 @@
                                     <div class="form-group">
                                         <input type="email" class="form-control" id="emailInput" placeholder="Your Business Email">
                                     </div>
-                                </div>
-                                <div class="btn-wrap">
-                                    <button type="submit" class="btn btn-primary">Find Out Your Interest Rate</button>
+                                    <div class="form-group btn-wrap">
+                                        <a href="https://oliinyk.github.io/lgc-capital/lgc-capital-form.html" class="btn btn-primary">Find Out Your Interest Rate</a>
+                                    </div>
                                 </div>
                             </form>
                         </div>
