added link on all buttons on long form

--- a/lgc-capital-3b.html
+++ b/lgc-capital-3b.html
@@ -363,7 +363,7 @@
                             </ul>
                         </div>
                         <div class="btn-holder">
-                            <a href="#" class="btn btn-primary">Find Out Your Interest Rate</a>
+                            <a href="https://oliinyk.github.io/lgc-capital/lgc-capital-form.html" class="btn btn-primary">Find Out Your Interest Rate</a>
                             <p>Get a decision in <span class="text-underline">under 48 hours</span> for R50K to R500K. Larger amounts take a bit longer.</p>
                         </div>
                     </div>
@@ -401,7 +401,7 @@
                             </ul>
                         </div>
                         <div class="btn-holder">
-                            <a href="#" class="btn btn-primary">Find Out Your Interest Rate</a>
+                            <a href="https://oliinyk.github.io/lgc-capital/lgc-capital-form.html" class="btn btn-primary">Find Out Your Interest Rate</a>
                             <p>Get a decision in <span class="text-underline">under 48 hours</span> for R50K to R500K. Larger amounts take a bit longer.</p>
                         </div>
                     </div>
@@ -445,7 +445,7 @@
                 <h2 class="title">Get a Decision in Under 48 Hours</h2>
                 <p class="description">Instant Cash Advances for Your Invoices & Purchase Orders</p>
                 <div class="btn-holder">
-                    <a href="#" class="btn btn-primary">Find Out Your Interest Rate</a>
+                    <a href="https://oliinyk.github.io/lgc-capital/lgc-capital-form.html" class="btn btn-primary">Find Out Your Interest Rate</a>
                 </div>
                 <p class="text">Get a decision in under 48 hours for R50K to R500K. Larger amounts take a bit longer.</p>
             </div>
