--- a/lgc-capital-3b.html
+++ b/lgc-capital-3b.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LGC Capital</title>
 
-    <link rel="icon" href="./assets/images/favicon/cropped-favicon-32x32.jpg" sizes="32x32" />
-    <link rel="icon" href="./assets/images/favicon/cropped-favicon-192x192.jpg" sizes="192x192" />
-    <link rel="apple-touch-icon" href="./assets/images/favicon/cropped-favicon-180x180.jpg" />
-    <meta name="msapplication-TileImage" content="./assets/images/favicon/cropped-favicon-270x270.jpg" />
+    <link rel="icon" href="./assets/images/favicon/cropped-favicon-32x32.jpg" sizes="32x32">
+    <link rel="icon" href="./assets/images/favicon/cropped-favicon-192x192.jpg" sizes="192x192">
+    <link rel="apple-touch-icon" href="./assets/images/favicon/cropped-favicon-180x180.jpg">
+    <meta name="msapplication-TileImage" content="./assets/images/favicon/cropped-favicon-270x270.jpg">
 
     <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/slick.css">
