--- a/lgc-capital-form.html
+++ b/lgc-capital-form.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LGC Capital</title>
 
-    <link rel="icon" href="./assets/images/favicon/cropped-favicon-32x32.jpg" sizes="32x32" />
-    <link rel="icon" href="./assets/images/favicon/cropped-favicon-192x192.jpg" sizes="192x192" />
-    <link rel="apple-touch-icon" href="./assets/images/favicon/cropped-favicon-180x180.jpg" />
-    <meta name="msapplication-TileImage" content="./assets/images/favicon/cropped-favicon-270x270.jpg" />
+    <link rel="icon" href="./assets/images/favicon/cropped-favicon-32x32.jpg" sizes="32x32">
+    <link rel="icon" href="./assets/images/favicon/cropped-favicon-192x192.jpg" sizes="192x192">
+    <link rel="apple-touch-icon" href="./assets/images/favicon/cropped-favicon-180x180.jpg">
+    <meta name="msapplication-TileImage" content="./assets/images/favicon/cropped-favicon-270x270.jpg">
 
     <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="form-step">
@@ -97,7 +96,6 @@
                 <div class="form-article">
                     <h4 class="form-title">Details of Request</h4>
                     <div class="form-row">
-
                         <div class="form-group">
                             <h6 class="label">Type of financing sought:</h6>
                             <ul class="checkbox-list">
@@ -115,7 +113,6 @@
                                 </li>
                             </ul>
                         </div>
-
                         <div class="form-group">
                             <label class="label" for="enterInput">The customer to whom services have been/are to be rendered</label>
                             <input type="text" class="form-control" id="enterInput" placeholder="Enter">
@@ -128,7 +125,6 @@
                             <label class="label" for="customerIndustryInput">Customer industry</label>
                             <input type="text" class="form-control" id="customerIndustryInput" placeholder="Customer industry">
                         </div>
-
                         <div class="form-group">
                             <label class="label" for="invoiceInput">Value of invoice/PO to be financed</label>
                             <input type="text" class="form-control" id="invoiceInput" placeholder="Value of invoice/PO to be financed">
@@ -168,26 +164,25 @@
                 </div>
                 <!-- 5 -->
                 <div class="form-article">
-                    <h4 class="form-title hidden-mob"></h4>
+                    <div class="form-title hidden-mob"></div>
                     <div class="form-row">
                         <h4 class="form-title">Average monthly current year</h4>
                         <div class="form-group custom-w">
-                            <label class="label" for="revenueInput">Revenue</label>
-                            <input type="text" class="form-control" id="revenueInput" placeholder="Revenue">
+                            <label class="label" for="revenueInput2">Revenue</label>
+                            <input type="text" class="form-control" id="revenueInput2" placeholder="Revenue">
                         </div>
                         <div class="form-group custom-w">
-                            <label class="label" for="grossMarginInput">Gross Margin</label>
-                            <input type="text" class="form-control" id="grossMarginInput" placeholder="Gross Margin">
+                            <label class="label" for="grossMarginInput2">Gross Margin</label>
+                            <input type="text" class="form-control" id="grossMarginInput2" placeholder="Gross Margin">
                         </div>
                         <div class="form-group custom-w">
-                            <label class="label" for="expensesInput">Expenses</label>
-                            <input type="text" class="form-control" id="expensesInput" placeholder="Expenses">
+                            <label class="label" for="expensesInput2">Expenses</label>
+                            <input type="text" class="form-control" id="expensesInput2" placeholder="Expenses">
                         </div>
                         <div class="form-group custom-w">
-                            <label class="label" for="profitAfterTaxInput">Profit after tax</label>
-                            <input type="text" class="form-control" id="profitAfterTaxInput" placeholder="Profit after tax">
+                            <label class="label" for="profitAfterTaxInput2">Profit after tax</label>
+                            <input type="text" class="form-control" id="profitAfterTaxInput2" placeholder="Profit after tax">
                         </div>
-
                         <div class="form-group custom-w">
                             <button type="submit" class="btn btn-primary">Get a Faster Decision</button>
                         </div>
